Self review fix: Make font, color  and alignment of card description consistent with outher pages

--- a/app/modules/sunlight/features/chat/setupAssistantPages/_ct-customer.scss
+++ b/app/modules/sunlight/features/chat/setupAssistantPages/_ct-customer.scss
@@ -21,7 +21,8 @@
     display: flex;
     flex-flow: column;
     .cardHeader1 {
-      margin-left: rem-calc(160px);
+      text-align: center;
+      color: $gray-dark-1;
     }
     .articleHeight {
       height: 100%;
